<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TwoFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radiogroupidfortwo"
                >
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/generalid"
                    android:text="@string/General"

                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rulesofid"
                    android:text="@string/Rulesofroadregulationviolation"

                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ticketlessid"
                    android:text="@string/Ticketlesstravel"

                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/Disobedienid"
                    android:text="@string/Disobedienceofauthoritiesorders"

                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/Drivingwithoutlicenseid"
                    android:text="@string/Drivingwithoutlicense"

                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/Drivingdespitedisqualificationid"
                    android:text="@string/Drivingdespitedisqualification"

                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/Oversizevehiclesid"
                    android:text="@string/Oversizevehicles"

                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/Overspeedingid"
                    android:text="@string/Overspeeding"

                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/Dangerousdrivingpenaltyid"
                    android:text="@string/Dangerousdrivingpenalty"

                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/Drunkendrivingid"
                    android:text="@string/Drunkendriving"

                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/SpeedingRacingid"
                    android:text="@string/SpeedingRacing"

                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/Vehiclewithoutpermitid"
                    android:text="@string/Vehiclewithoutpermit"

                    />


                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/Aggregatorsid"
                    android:text="@string/Aggregators"

                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/Overloadingid"
                    android:text="@string/Overloading"

                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/Overloadingofpassengersid"
                    android:text="@string/Overloadingofpassengers"

                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/Seatbeltid"
                    android:text="@string/Seatbelt"

                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/Overloadingoftwowheelersid"
                    android:text="@string/Overloadingoftwowheelers"

                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/Helmetsid"
                    android:text="@string/Helmets"

                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/firstgear2id"
                    android:text="First Gear for 2 wheeler (100)"

                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/secgear2id"
                    android:text="Second Gear for 2 wheeler (300)"

                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/thgear2id"
                    android:text="Third Gear for 2 wheeler (500)"

                    />





            </RadioGroup>







        </LinearLayout>




    </ScrollView>



</FrameLayout>