<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FourFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radiogroupidforfour"
                >

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/generalid"
                android:text="@string/General4"

                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ViolationofRoadRulesid"
                android:text="@string/ViolationofRoadRules"

                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Ticketlesstravel4id"
                android:text="@string/Ticketlesstravel4"

                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/OversizedVehiclesid"
                android:text="@string/OversizedVehicles"

                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/DrivingWhenMentallyPhysicallyUnfitid"
                android:text="@string/DrivingWhenMentallyPhysicallyUnfit"

                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/AccidentRelatedOffencesid"
                android:text="@string/AccidentRelatedOffences"

                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/DrivingUninsuredVehicleid"
                android:text="@string/DrivingUninsuredVehicle"

                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/VehicleWithoutPermitid"
                android:text="@string/VehicleWithoutPermit"

                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/NotWearingSeatbeltid"
                android:text="@string/NotWearingSeatbelt"

                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Drunkendriving4id"
                android:text="@string/Drunkendriving4"

                />




                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/firstgear4id"
                    android:text="First Gear for 4 wheeler (100)"

                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/secgear4id"
                    android:text="Second Gear for 4 wheeler (300)"

                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/thgear4id"
                    android:text="Third Gear for 4 wheeler (500)"

                    />

            </RadioGroup>





        </LinearLayout>




    </ScrollView>



</FrameLayout>